fixed z-index bug affecting mega menu and sections

--- a/src/theme/_theme.scss
+++ b/src/theme/_theme.scss
@@ -21,7 +21,7 @@ $theme-palette: (
 	@include e(header) {
 		display: flex;
 		position: relative;
-		z-index: 1;
+		z-index: 3;
 		flex-direction: column;
 	}
 
